# misanthrope_PM

./: .env  .gitignore  README.md  main.py  project_manager.py  pyproject.toml  quality_rater.py  utils.py
app/: all_predicted_tasks.txt  commit_splitter.py  context_keeper.py  git_reverse_analyst.py  main.py  models.py  quality_rater.py  utils.py
app/core/: context_keeper.py  db.py  git_reverse_analyst.py
app/pipelines/: simple_recostruction.py
data/nodis_project/closed_tasks/: november_25.txt  october_25.txt  september_25.txt
project_management/: README.md  git.logs  git_reverse_analyst.py  models.py  project_manager.py  pyproject.toml
project_management/closed_tasks/: november_25.txt
