[project]
name = "misanthrope-pm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "prefect>=2.10.18",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
]
